--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</style>
 </head>
 <body>
-
+<iframe src="http://sankarpaty.com/images/vtour/SanKarpatuN2.html" frameborder="1" width="100%" height="500px"> </iframe>
 <script src="tour.js"></script>
 
 <div id="pano" style="width:100%; height:100%;">
